fix layout bug

--- a/app/home.module.css
+++ b/app/home.module.css
@@ -641,6 +641,10 @@
   .header {
     grid-template-columns: 1fr;
   }
+
+  .figureForm {
+    align-content: center;
+  }
 }
 
 @media (max-width: 640px) {
